# oddball

./: README.md  hatch.toml  pyproject.toml
src/oddball/: __init__.py  datasets.py
src/oddball/data/: loader.py
src/oddball/generator/: base.py  batch.py
tests/: test_download_all.py  test_loader.py
