[project]
name = "oddball"
version = "1.0.0"
description = "Anomaly Detection Dataset Collection"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.23",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
]
keywords = ["anomaly-detection", "datasets", "adbench", "npz"]
authors = [{ name = "Oddball Maintainers" }]
license = { file = "LICENSE" }

[project.urls]
Homepage = "https://github.com/OliverHennhoefer/oddball"
Repository = "https://github.com/OliverHennhoefer/oddball"
Issues = "https://github.com/OliverHennhoefer/oddball/issues"

[project.optional-dependencies]
tests = ["pytest>=7.4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
